# prodpulse-api

./: .dockerignore  .env  .gitattributes  .replit  Dockerfile  README.md  manage.py  pyproject.toml  render.yaml  replit.md  requirements.txt  setup.py
apps/: .gitignore
apps/api/: models.py  urls.py
apps/authentication/: apps.py  urls.py
apps/notifications/: alerts  apps.py  urls.py
apps/orders/: apps.py  urls.py
apps/products/: apps.py  urls.py
apps/pulses/: consumers.py  models.py  routing.py  utils.py
apps/users/: apps.py  permissions.py  urls.py
core/: settings.py
prodpulse-api/: .env  .env.development  .env.production  Dockerfile  asgi.py  db.sqlite3  manage.py  requirements.txt
prodpulse-api/api/: models.py
prodpulse-api/api/migrations/: 0001_initial.py
prodpulse-api/apps/analytics/: models.py  urls.py  views.py
prodpulse-api/apps/api/: apps.py  models.py  urls.py
prodpulse-api/apps/authentication/: serializers.py  urls.py  views.py
prodpulse-api/apps/notifications/: services.py
prodpulse-api/apps/orders/: apps.py  models.py
prodpulse-api/config/: settings.py
prodpulse-api/core/: asgi.py  settings.py  urls.py
prodpulse-api/tests/: test_metrics.py
prodpulse_api/: .env  .gitignore  Dockerfile  Procfile  README.md  asgi.py  db.sqlite3  pyproject.toml  render.yaml  requirements.txt  setup.py  wsgi.py
prodpulse_api/apps/: pyproject.toml
prodpulse_api/config/: __init__.py  asgi.py  celery.py  celery_app.py  urls.py  wsgi.py
prodpulse_api/core/: apps.py  asgi.py  settings.py  urls.py
prodpulse_api/prodpulse_api/: __init__.py
(+47 files in other folders)
